syntax = "proto3";
package rafay.dev.types.sentry;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";

message KubeconfigRevocation {
	string id = 1;
	string organizationID = 2;
	string partnerID = 3;
	string accountID = 4;
	bool isSSOUser = 5;
	google.protobuf.Timestamp revokedAt = 6;
	google.protobuf.Timestamp createdAt = 7 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
}

message KubeconfigSetting {
	string id = 1;
	string organizationID = 2;
	string partnerID = 3;
	string accountID = 4;
	string scope = 5;
	sint64 validitySeconds = 6;
	google.protobuf.Timestamp createdAt = 7 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
	google.protobuf.Timestamp modifiedAt = 8 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
	google.protobuf.Timestamp deletedAt = 9 [
		(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
		  read_only : true
		}
	];
  	bool enableSessionCheck = 10;
	bool isSSOUser = 11;
	bool enablePrivateRelay = 12;
    bool enforceOrgAdminSecretAccess = 13;
	bool disableWebKubectl = 14;
    bool disableCLIKubectl = 15;
}